--- a/report/report_general_collection.xml
+++ b/report/report_general_collection.xml
@@ -5,7 +5,7 @@
       <t t-call="web.html_container">
         <t t-foreach="docs" t-as="acc">
           <t t-call="web.external_layout">
-            <div class="article">
+            <div class="containecontainer">
               <div>
                 <h2 class="text-center">Estado de Cuenta</h2>
                 <hr style="border: 1px solid black;"/>
